# bagol

./: .gitignore  Makefile  README.md  byte.opam  changelog.md  dune-project  tree.opam
data/: basic_statements.lox  blockscopes.bgl  closureTest.bgl  fibloops.bgl  fibrec.bgl  nestedclosures.bgl  scoping.bgl  test.bgl
data/scanning/: numbers.lox
lib/byte/: dune
lib/tree/: ast.ml  bagol.ml  dune  environment.ml  errorhandling.ml  interpreter.ml  parser.ml  resolver.ml  scanner.ml  state.ml  terminal.ml  token.ml  value.ml
test/: scanner.ml
test/interpreter/: dune  test.ml
test/scan/: dune
